# vianu

./: .gitignore  README.md  citation.cff  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  pages.yml
docs/: _config.yml  drugsafetycompare.md  fraudcrawler.md  homedetails.md  index.md  installation.md  spock.md  toxicologygan.md
tests/tests-drugsafetycompare/: test-compare.py  test-germany.py  test-switzerland.py
tests/tests-lasa/unittests/: test_src_units.py
tests/tests-spock/data/: chunking.txt  test.json
tests/tests-spock/unittests/: test_chunking.py  test_src_base.py  test_src_scraping.py
vianu/: __init__.py
vianu/drugsafetycompare/: launch_demo_app.py  launch_demo_app_count.py  launch_demo_app_embedding.py  launch_demo_pipeline.py
vianu/fraudcrawler/: .template_env  __init__.py  launch_demo_app.py  launch_demo_pipeline.py
vianu/fraudcrawler/src/: classify_suspicious_product.py  client.py  crawler.py  enrichment.py  enrichment_utils.py  processor.py  serpapi.py  utils.py  zyteapi.py
vianu/fraudcrawler/tests/: test_keyword_enricher.py
vianu/lasa/: __main__.py  comparison_utils.py  config.py  dataset_dummy.csv  lasa_pipeline.py  launch_demo_pipeline.py  load_files.py  matching_sequences.py  settings.py
vianu/lasa/app/: __init__.py  app.py
vianu/lasa/files/: swissmedic_20241231.xlsx
vianu/lasa/src/: base.py  cli.py  units.py
vianu/newsscraper/: envtemplate
vianu/newsscraper/src/: db_manager.py  db_setup.py  entrypoint.sh  main.py  scrape.py
vianu/sideeffectbot/: lauch_demo_app.py  lauch_demo_pipeline.py
vianu/sideeffectbot/src/: germany.py  switzerland.py
vianu/spock/: README.md  __main__.py  launch_demo_app.py  launch_demo_pipeline.py  requirements.txt  settings.py
vianu/spock/app/: __init__.py  app.py  base.py  formatter.py
vianu/spock/assets/: sample_data.json
vianu/spock/src/: base.py  chunking.py  cli.py  data_model.py  (+6 more)
vianu/toxicologygan/: launch_demo_tox_pipeline.py  model.py  opt.py  train.py  utils.py
(+25 files in other folders)
